# lc-mcp-kml

./: .gitignore  Cargo.toml  Dockerfile  README.md  RER-A.kml  RER-A.yml  RER-B.kml  RER-B.yml  RER-C.kml  RER-C.yml  RER-D.kml  RER-D.yml  RER-E.kml  RER-E.yml  RER-input.yml  RER-join-input.yml  fetch_bus_idf.py  input.yml  local.kml
.github/workflows/: deploy.yml
frontend/: package-lock.json  package.json  playwright.config.ts
frontend/e2e/: config-page.spec.ts
frontend/e2e/fixtures/: mock-data.ts  setup.ts
frontend/src/: App.jsx  index.css
frontend/src/components/: LibraryModal.css  LibraryModal.jsx
frontend/src/pages/: ConfigPage.css  ConfigPage.jsx  Home.css  Home.jsx  MapPage.css  MapPage.jsx
idf/bus/: bus-1.kml  bus-10.kml  bus-100.kml  bus-101.kml  bus-102.kml  bus-103.kml  bus-104.kml  bus-105.kml  bus-106.kml  bus-107.kml  bus-108.kml  bus-109.kml  bus-11.5.kml  bus-11.kml  bus-110.kml  bus-1101.kml  bus-1102.kml  bus-1103.kml  bus-1104.kml  bus-111.kml  bus-1110.kml  bus-1111.kml  bus-1112.kml  bus-1113.kml  bus-1114.kml  bus-1115.kml  bus-1116.kml  bus-1117.kml  bus-1118.kml  bus-1119.kml  bus-112.kml  bus-113.kml  bus-1130.kml  bus-1131.kml  bus-1132.kml  bus-1133.kml  bus-1134.kml  bus-1135.kml  bus-1136.kml  bus-1137.kml  (+1765 more)
idf/metro/: metro-15.kml
src/: lib.rs  main.rs  model.rs  processing.rs
static/bus/: all-bus-houilles.kml  bus-1.kml  bus-25.kml  bus-262.kml  bus-272.kml  bus-34.kml  bus-502.kml  bus-503.kml  bus-6.kml  bus-9.kml  bus-H.kml  bus-J.kml  bus-K.kml  bus-L_Keolis_Argenteuil_Boucles_de_Seine.kml  bus-L_SNCF.kml  bus-S4.kml
tests/: blah.kml  tests.rs
