[package]
name = "lc-kml-utils"
version = "0.1.0"
edition = "2024"
default-run = "lc-kml-utils"

[dependencies]
kml = "0.13.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
geo = "0.29"
regex = "1"
rand = "0.8"
ureq = { version = "3.2.0", features = ["json", "native-tls"] }
serde_json = "1.0.149"
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs"] }

[[bin]]
name = "matelot"
path = "src/bin/matelot.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"
